removed some code parts, updated swagger docs, added X-Forwarded-For to allowed headers
